Added uniform page content and styling as well as fixing all indentation

--- a/contact.html
+++ b/contact.html
@@ -10,15 +10,15 @@
 
 <body>
 
-<!-- ------------------- Top Bar ------------------- -->
-<header>
+  <!-- ------------------- Top Bar ------------------- -->
+  <header>
 
-  <nav>
+    <nav>
 
-    <ul>
+      <ul>
 
-      <li><a href="index.html">Home</a></li>
-      <li class="dropdown">
+        <li><a href="index.html">Home</a></li>
+        <li class="dropdown">
           <span class="aboutBtn">About </span>
           <div class="dropdown-content"> <!-- Opens div class dropdown-content-->
             <a href="faq.html">FAQ</a>
@@ -26,28 +26,31 @@
             <a href="staff.html">Staff</a>
             <a href="uniform.html">Uniform</a>
           </div> <!-- Closes div class dropdown-content -->
-      </li>
-      <li><a href="news.html">News</a></li>
-      <li><a href="homeLearning.html">Home Learning</a></li>
-      <li><a href="contact.html">Contact</a></li>
+        </li>
+        <li><a href="news.html">News</a></li>
+        <li><a href="homeLearning.html">Home Learning</a></li>
+        <li><a href="contact.html">Contact</a></li>
 
-    </ul>
+      </ul>
 
-  </nav> 
-  <div> <a href="index.html"><img id="logo" src="bpslogo.png"></a> </div>
-  <h1> Barnhill Primary School </h1>
-</header>
-<!-- ------------------- Main Body ------------------- -->
+    </nav>
+    <div> <a href="index.html"><img id="logo" src="bpslogo.png"></a> </div>
+    <h1> Barnhill Primary School </h1>
+  </header>
+  <!-- ------------------- Main Body ------------------- -->
 
-<div class="mainBody"> <!-- Opens div class mainBody -->
+  <div class="mainBody"> <!-- Opens div class mainBody -->
 
-  <h1>Contact</h1>
+    <h1>Contact</h1>
 
     <h2 style="float: right;"> Location </h2>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2203.3672835063953!2d-2.8576694596827665!3d56.478660535962945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48865ef4b049440f%3A0xbf911ad0ca76e7f8!2sBarnhill%20Primary%20School!5e0!3m2!1sen!2suk!4v1708007344974!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2203.3672835063953!2d-2.8576694596827665!3d56.478660535962945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48865ef4b049440f%3A0xbf911ad0ca76e7f8!2sBarnhill%20Primary%20School!5e0!3m2!1sen!2suk!4v1708007344974!5m2!1sen!2suk"
+      width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"></iframe>
     <p>Falkland Crescent <br> Dundee <br> DD5 3SQ </p>
 
-  
+
     <h2> Tel: </h2>
     <ul>
       <li> School: 01382 436993 </li>
@@ -62,31 +65,41 @@
 
 
 
-<!-- ------------------- Footer ------------------- -->
+    <!-- ------------------- Footer ------------------- -->
 
-  <div class="footer"> <!-- Opens div class footer -->
-    <footer>
-      <div class="footerLeft"> <!-- Opens div class footerLeft -->
-      <!--float this left-->
-      <h3> Useful Links</h3>
-      <a href = "https://twitter.com/BarnhillPrimary"><img src="https://www.phoronix.net/image.php?id=2023&image=twitter_x" alt= "X (Twitter)" style = "width: 60px; height:60px;"></a>
-      <a href = "https://secure.glowscotland.org.uk/login/login.htm"><img src="https://tse3.mm.bing.net/th?id=OIP.2e_o-42OuCuPqAyTXplgXAHaEc&pid=Api" alt= "Glow RM Unify" style = "width: 60px; height:60px;"></a>
-      <a href = "https://www.dundeecity.gov.uk/"><img src="https://tse2.mm.bing.net/th?id=OIP.mOvYybLpOpVzVJpuYj5pjQHaFM&pid=Api" alt= "Dundee City Council" style = "width: 60px; height:60px;"></a>
-      <a href = "http://www.educationscotland.gov.uk/"><img src="https://tse3.mm.bing.net/th?id=OIP.bawbOETZ8HJexKbpBS7ppwHaC9&pid=Api" alt= "Education Scotland" style = "width: 60px; height:60px;"></a>
-      <a href = "https://app.parentpay.com/public/client/security/v2/#/login"><img src="https://tse3.mm.bing.net/th?id=OIP.VxZRig9HkfZhpBCFEdyNEwHaFj&pid=Api" alt= "Parent Pay Portal" style = "width: 60px; height:60px;"></a>
-      </div> <!-- Closes div class footerLeft -->
-      <!--float this right-->
-      <div class="footerRight"> <!-- Opens div class footerRight -->
-      <button>Settings</button>
-      <p>Contact Us
-        other contact info</p>
-  
-      <p>&#169; Barnhill Primary School 2023</p>
-      </div> <!-- Closes div class footerRight -->
-    
-    </footer>
-  </div> <!-- Closes div class footer -->
-</div> <!-- Closes div class mainBody -->
+    <div class="footer"> <!-- Opens div class footer -->
+      <footer>
+        <div class="footerLeft"> <!-- Opens div class footerLeft -->
+          <!--float this left-->
+          <h3> Useful Links</h3>
+          <a href="https://twitter.com/BarnhillPrimary"><img
+              src="https://www.phoronix.net/image.php?id=2023&image=twitter_x" alt="X (Twitter)"
+              style="width: 60px; height:60px;"></a>
+          <a href="https://secure.glowscotland.org.uk/login/login.htm"><img
+              src="https://tse3.mm.bing.net/th?id=OIP.2e_o-42OuCuPqAyTXplgXAHaEc&pid=Api" alt="Glow RM Unify"
+              style="width: 60px; height:60px;"></a>
+          <a href="https://www.dundeecity.gov.uk/"><img
+              src="https://tse2.mm.bing.net/th?id=OIP.mOvYybLpOpVzVJpuYj5pjQHaFM&pid=Api" alt="Dundee City Council"
+              style="width: 60px; height:60px;"></a>
+          <a href="http://www.educationscotland.gov.uk/"><img
+              src="https://tse3.mm.bing.net/th?id=OIP.bawbOETZ8HJexKbpBS7ppwHaC9&pid=Api" alt="Education Scotland"
+              style="width: 60px; height:60px;"></a>
+          <a href="https://app.parentpay.com/public/client/security/v2/#/login"><img
+              src="https://tse3.mm.bing.net/th?id=OIP.VxZRig9HkfZhpBCFEdyNEwHaFj&pid=Api" alt="Parent Pay Portal"
+              style="width: 60px; height:60px;"></a>
+        </div> <!-- Closes div class footerLeft -->
+        <!--float this right-->
+        <div class="footerRight"> <!-- Opens div class footerRight -->
+          <button>Settings</button>
+          <p>Contact Us
+            other contact info</p>
+
+          <p>&#169; Barnhill Primary School 2023</p>
+        </div> <!-- Closes div class footerRight -->
+
+      </footer>
+    </div> <!-- Closes div class footer -->
+  </div> <!-- Closes div class mainBody -->
 </body>
 
 </html>
