--- a/uniform.html
+++ b/uniform.html
@@ -3,23 +3,23 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width", initial-scale=1.0>
+  <meta name="viewport" content="width=device-width" , initial-scale=1.0>
   <title>Home</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  
-<!-- ------------------- Navigation ------------------- -->
 
-<header>
+  <!-- ------------------- Navigation ------------------- -->
 
-  <nav>
+  <header>
 
-    <ul>
+    <nav>
 
-      <li><a href="index.html">Home</a></li>
-      <li class="dropdown">
+      <ul>
+
+        <li><a href="index.html">Home</a></li>
+        <li class="dropdown">
           <span class="aboutBtn">About </span>
           <div class="dropdown-content"> <!-- Opens div class dropdown-content-->
             <a href="faq.html">FAQ</a>
@@ -27,79 +27,236 @@
             <a href="staff.html">Staff</a>
             <a href="uniform.html">Uniform</a>
           </div> <!-- Closes div class dropdown-content -->
-      </li>
-      <li><a href="news.html">News</a></li>
-      <li><a href="homeLearning.html">Home Learning</a></li>
-      <li><a href="contact.html">Contact</a></li>
+        </li>
+        <li><a href="news.html">News</a></li>
+        <li><a href="homeLearning.html">Home Learning</a></li>
+        <li><a href="contact.html">Contact</a></li>
 
-    </ul>
+      </ul>
 
-  </nav> 
-  <div> <a href="index.html"><img id="logo" src="bpslogo.png"></a> </div>
-  <h1> Barnhill Primary School </h1>
-</header>
+    </nav>
+    <div> <a href="index.html"><img id="logo" src="bpslogo.png"></a> </div>
+    <h1> Barnhill Primary School </h1>
+  </header>
 
-<!-- ------------------- Main Body ------------------- -->
+  <!-- ------------------- Main Body ------------------- -->
 
-<!-- let me cook here -->
+  <!-- let me cook here -->
 
-<div class="mainBody"> <!-- Opens div class mainBody -->
-  <div class="content"> 
+  <div class="mainBody"> <!-- Opens div class mainBody -->
+    <div class="content">
 
-    <h1> Uniform: </h1>
-    <p> At Barnhill, we believe that uniform plays an important part in unifying our pupils both together and with the school. We offer a range of official school uniform items in collaboration with BEUniforms and we allow some general formal attire. Please note that the terms "Boys" and "Girls' are included below to denote standard sizing conventions. We encourage our pupils to wear whatever they feel most comfortable in within our regulations. If you have any queries about uniform, feel free to <a href="contact.html"> contact </a> us.</p>
+      <h1> Uniform </h1>
+      <p> At Barnhill, we believe that uniform plays an important part in unifying our pupils both together and with the
+        school. We offer a range of official school uniform items in collaboration with BEUniforms and we allow some
+        general formal attire. Please note that the terms "Boys" and "Girls' are included below to denote standard
+        sizing conventions. We encourage our pupils to wear whatever they feel most comfortable in within our
+        regulations. If you have any queries about uniform, feel free to <a href="contact.html"> contact </a> us.</p>
 
-    <h2> Torso: </h2>
-    <h3> Official: </h3>
+      <h2> Torso </h2>
 
-    <h3> Also Accepted:</h3>
-    <ul> 
-      <li> White Shirt </li>
-      <li> White Polo Shirt </li>
-    </ul>
+      <div class="uniformContainer">
+        <a href="https://www.border-embroideries.co.uk/barnhill-primary-school-polo-101208.html" class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/faac27021abb5cb15a99a04d7c33b2c1/b/a/barnhill_ps_poloshirt.png">
+          <p class="productCardInfo"> Barmhill Primary School Poloshirt <br> £16.75 </p>
+        </a>
 
-    <h2> Legs:</h2>
-    <h3> Accepted:</h3>
+        <a href="https://www.border-embroideries.co.uk/boys-uniform/poloshirts-t-shirts.html?color=white"
+          class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/faac27021abb5cb15a99a04d7c33b2c1/k/e/kes-wht_1_2_1.jpg">
+          <p class="productCardInfo"> White Poloshirts <br> Prices Vary</p>
+        </a>
 
-    <h2> Footwear:</h2>
-    <h3> Accepted:</h3>
-    <ul>
-    <li> Black School Shoes </li>
-    </ul>
+        <a href="https://www.border-embroideries.co.uk/boys-uniform/shirts.html" class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/faac27021abb5cb15a99a04d7c33b2c1/e/8/e851f953efcc202ae1503e9e69cc735327e2171a_1.jpg">
+          <p class="productCardInfo"> White Shirts <br> Prices Vary</p>
+        </a>
 
-    <h2> Misc:</h2>
-    <h3> Official: </h3>
+        <a href="https://www.border-embroideries.co.uk/girls-uniform/blouses.html" class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/faac27021abb5cb15a99a04d7c33b2c1/1/a/1ae2defa07ab051409bbdc01371b38f2df046ebc_1.jpg">
+          <p class="productCardInfo"> White Blouses <br> Prices Vary</p>
+        </a>
 
-    <h3> Also Accepted:</h3>
+        <a href="https://www.border-embroideries.co.uk/bluemax-banner-avon-gingham-101864.html" class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/faac27021abb5cb15a99a04d7c33b2c1/9/1/913104_gr.jpg">
+          <p class="productCardInfo"> Green Checkered Summer Dress <br> £20.35</p>
+        </a>
 
-  </div>
+        <a href="https://www.border-embroideries.co.uk/boys-uniform/jumpers-knitwear.html?color=grey"
+          class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/faac27021abb5cb15a99a04d7c33b2c1/c/b/cbv-mgy_1.jpg">
+          <p class="productCardInfo"> Grey Jumpers <br> Prices Vary</p>
+        </a>
 
-<!-- ------------------- Footer ------------------- -->
+        <a href="https://www.border-embroideries.co.uk/barnhill-primary-sweatshirt-101210.html" class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/faac27021abb5cb15a99a04d7c33b2c1/b/a/barnhill_ps_sweatshirt.png">
+          <p class="productCardInfo"> Barnhill Primary School Sweatshirt <br> £13.75</p>
+        </a>
+
+        <a href="https://www.border-embroideries.co.uk/barnhill-primary-cardigan-101206.html" class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/faac27021abb5cb15a99a04d7c33b2c1/b/a/barnhill_ps_cardigan.png">
+          <p class="productCardInfo"> Barnhill Primary School Cardigan <br> £15.99 </p>
+        </a>
+
+
+
+        <a href="https://www.border-embroideries.co.uk/barnhill-ps-45-striped-tie.html" class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/faac27021abb5cb15a99a04d7c33b2c1/b/a/barnhill_ss39_grey.jpg">
+          <p class="productCardInfo"> Barnhill PS Boys Blazer <br> £37.99</p>
+        </a>
+
+        <a href="https://www.border-embroideries.co.uk/barnhill-ps-boys-wool-blazer-217170.html" class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/faac27021abb5cb15a99a04d7c33b2c1/b/a/barnhill_ss10e_grey_b.jpg">
+          <p class="productCardInfo"> Barnhill PS Boys Wool Blazer <br> £99.99</p>
+        </a>
+
+        <a href="https://www.border-embroideries.co.uk/barnhill-ps-girls-blazer-217169.html" class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/faac27021abb5cb15a99a04d7c33b2c1/b/a/barnhill_ss29_grey.jpg">
+          <p class="productCardInfo"> Barnhill PS Girls Blazer <br> £37.99</p>
+        </a>
+
+        <a href="https://www.border-embroideries.co.uk/barnhill-ps-girls-wool-blazer-217171.html" class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/faac27021abb5cb15a99a04d7c33b2c1/b/a/barnhill_ss01e_grey_g.jpg">
+          <p class="productCardInfo"> Barnhill PS Girls Wool Blazer <br> £99.99 </p>
+        </a>
+
+        <a href="https://www.border-embroideries.co.uk/barnhill-primary-hoodie.html" class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/faac27021abb5cb15a99a04d7c33b2c1/1/b/1bc5a3ec8f52a62a7cd150c979c261ced41f769b_1.png">
+          <p class="productCardInfo"> Barnhill Primary Hoodie <br> £14.99 </p>
+        </a>
+
+        <a href="https://www.border-embroideries.co.uk/barnhill-ps-reversible-jackt-101211.html" class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/faac27021abb5cb15a99a04d7c33b2c1/b/a/barnhill_ps_reversible_jacket.png">
+          <p class="productCardInfo"> Barnhill PS Reversible Jacket <br> £21.99</p>
+        </a>
+
+
+
+        <a href="https://www.border-embroideries.co.uk/barnhill-senior-sweatshirt-1-29-117616.html" class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/faac27021abb5cb15a99a04d7c33b2c1/b/a/barnhill_snr_sshirt.jpg">
+          <p class="productCardInfo"> Barnhill PS Senior Pupil Sweatshirt <br> £17.75</p>
+        </a>
+
+        <a href="https://www.border-embroideries.co.uk/barnhill-senior-cardigan-1-29-117615.html" class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/faac27021abb5cb15a99a04d7c33b2c1/b/a/barnhill_senior_cardigan.png">
+          <p class="productCardInfo"> Barnhill PS Senior Pupil Cardigan <br> £15.99</p>
+        </a>
+
+
+      </div>
+
+
+      <h2> Trousers & Skirts</h2>
+      <div class="uniformContainer">
+        <a href="https://www.border-embroideries.co.uk/she-innovation-boys-shorts.html" class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/faac27021abb5cb15a99a04d7c33b2c1/8/a/8aaa4c1c7d6f1cabf2652b469bc28ee897e12390_2.jpg">
+          <p class="productCardInfo"> School Shorts <br> £12.10</p>
+        </a>
+
+        <a href="https://www.border-embroideries.co.uk/boys-uniform/trousers.html" class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/faac27021abb5cb15a99a04d7c33b2c1/d/1/d109eacee4ef07686540134d0e2217d6e7f8b37c.jpg">
+          <p class="productCardInfo"> School Trousers <br> Prices Vary</p>
+        </a>
+
+        <a href="https://www.border-embroideries.co.uk/girls-uniform/skirts-pinafores-dresses.html?item_brand=2907"
+          class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/faac27021abb5cb15a99a04d7c33b2c1/s/k/skb_grey_2.jpg">
+          <p class="productCardInfo"> School Skirts <br> Prices Vary</p>
+        </a>
+
+        <a href="https://www.border-embroideries.co.uk/girls-uniform/skirts-pinafores-dresses/pinafores.html?item_brand=2909"
+          class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/faac27021abb5cb15a99a04d7c33b2c1/1/0/102_black_7.jpg">
+          <p class="productCardInfo"> School Pinafores <br> Prices Vary</p>
+        </a>
+
+      </div>
+
+      <h2> Footwear</h2>
+      <div class="uniformContainer">
+        <a href="https://www.border-embroideries.co.uk/she-innovation-boys-shorts.html" class="productCard">
+          <img src="https://www.sportsdirect.com/images/products/09308003_l.jpg">
+          <p class="productCardInfo"> Black School Shoes<br> Prices Vary</p>
+        </a>
+      </div>
+
+      <h2> Misc</h2>
+      <div class="uniformContainer">
+        <a href="https://www.border-embroideries.co.uk/barnhill-ps-45-striped-tie.html" class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/faac27021abb5cb15a99a04d7c33b2c1/1/b/1b8276a7acda9433acb1f19595304a05b5e8064a_3.png">
+          <p class="productCardInfo"> Barnhill PS 45" Striped Tie <br> £8.00 </p>
+        </a>
+        <a href="https://www.border-embroideries.co.uk/schoolbags.html?product_list_limit=36" class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/faac27021abb5cb15a99a04d7c33b2c1/i/b/ibmp12ry_14.jpg">
+          <p class="productCardInfo"> School Bags <br> Prices Vary </p>
+        </a>
+        <a href="https://www.border-embroideries.co.uk/nametape-117478.html" class="productCard">
+          <img
+            src="https://www.border-embroideries.co.uk/pub/media/catalog/product/cache/454408770346d5622b0e4131336649ad/n/a/nametape.jpg">
+          <p class="productCardInfo"> Iron On Name Labels <br> £3.30 </p>
+        </a>
+      </div>
+
+
+    </div>
+
+    <!-- ------------------- Footer ------------------- -->
 
     <div class="footer"> <!-- Opens div class footer -->
-    <footer>
-      <div class="footerLeft"> <!-- Opens div class footerLeft -->
-      <!--float this left-->
-      <h3> Useful Links</h3>
-      <a href = "https://twitter.com/BarnhillPrimary"><img src="https://www.phoronix.net/image.php?id=2023&image=twitter_x" alt= "X (Twitter)" style = "width: 60px; height:60px;"></a>
-      <a href = "https://secure.glowscotland.org.uk/login/login.htm"><img src="https://tse3.mm.bing.net/th?id=OIP.2e_o-42OuCuPqAyTXplgXAHaEc&pid=Api" alt= "Glow RM Unify" style = "width: 60px; height:60px;"></a>
-      <a href = "https://www.dundeecity.gov.uk/"><img src="https://tse2.mm.bing.net/th?id=OIP.mOvYybLpOpVzVJpuYj5pjQHaFM&pid=Api" alt= "Dundee City Council" style = "width: 60px; height:60px;"></a>
-      <a href = "http://www.educationscotland.gov.uk/"><img src="https://tse3.mm.bing.net/th?id=OIP.bawbOETZ8HJexKbpBS7ppwHaC9&pid=Api" alt= "Education Scotland" style = "width: 60px; height:60px;"></a>
-      <a href = "https://app.parentpay.com/public/client/security/v2/#/login"><img src="https://tse3.mm.bing.net/th?id=OIP.VxZRig9HkfZhpBCFEdyNEwHaFj&pid=Api" alt= "Parent Pay Portal" style = "width: 60px; height:60px;"></a>
-      </div> <!-- Closes div class footerLeft -->
-      <!--float this right-->
-      <div class="footerRight"> <!-- Opens div class footerRight -->
-      <button>Settings</button>
-      <p>Contact Us
-        other contact info</p>
-  
-      <p>&#169; Barnhill Primary School 2023</p>
-      </div> <!-- Closes div class footerRight -->
-    
-    </footer>
-  </div> <!-- Closes div class footer -->
-</div> <!-- Closes div class mainBody -->
+      <footer>
+        <div class="footerLeft"> <!-- Opens div class footerLeft -->
+          <!--float this left-->
+          <h3> Useful Links</h3>
+          <a href="https://twitter.com/BarnhillPrimary"><img
+              src="https://www.phoronix.net/image.php?id=2023&image=twitter_x" alt="X (Twitter)"
+              style="width: 60px; height:60px;"></a>
+          <a href="https://secure.glowscotland.org.uk/login/login.htm"><img
+              src="https://tse3.mm.bing.net/th?id=OIP.2e_o-42OuCuPqAyTXplgXAHaEc&pid=Api" alt="Glow RM Unify"
+              style="width: 60px; height:60px;"></a>
+          <a href="https://www.dundeecity.gov.uk/"><img
+              src="https://tse2.mm.bing.net/th?id=OIP.mOvYybLpOpVzVJpuYj5pjQHaFM&pid=Api" alt="Dundee City Council"
+              style="width: 60px; height:60px;"></a>
+          <a href="http://www.educationscotland.gov.uk/"><img
+              src="https://tse3.mm.bing.net/th?id=OIP.bawbOETZ8HJexKbpBS7ppwHaC9&pid=Api" alt="Education Scotland"
+              style="width: 60px; height:60px;"></a>
+          <a href="https://app.parentpay.com/public/client/security/v2/#/login"><img
+              src="https://tse3.mm.bing.net/th?id=OIP.VxZRig9HkfZhpBCFEdyNEwHaFj&pid=Api" alt="Parent Pay Portal"
+              style="width: 60px; height:60px;"></a>
+        </div> <!-- Closes div class footerLeft -->
+        <!--float this right-->
+        <div class="footerRight"> <!-- Opens div class footerRight -->
+          <button>Settings</button>
+          <p>Contact Us</p>
 
- </body>
+          <p>&#169; Barnhill Primary School 2023</p>
+        </div> <!-- Closes div class footerRight -->
+
+      </footer>
+    </div> <!-- Closes div class footer -->
+  </div> <!-- Closes div class mainBody -->
+
+</body>
 
 </html>
