--- a/dates.html
+++ b/dates.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Dates</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Dates</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
 
-<!-- ------------------- Top Bar ------------------- -->
+  <!-- ------------------- Top Bar ------------------- -->
 
-<div class="header"> 
-  <div class="top-bar">
+  <div class="header">
+    <div class="top-bar">
 
-  <div> <a href="index.html"><img id="logo" src="bpslogo.png"></a> </div>
+      <div> <a href="index.html"><img id="logo" src="bpslogo.png"></a> </div>
 
-  <div class="title"> <h1>Barnhill Primary School<h1> </div>
+      <div class="title">
+        <h1>Barnhill Primary School<h1>
+      </div>
 
-  <div class="search"> <input type=text placeholder="Search..."> <button>Go</button> </div>
+      <div class="search"> <input type=text placeholder="Search..."> <button>Go</button> </div>
 
-  <div class="login">  <button>Login</button>
-</div>
+      <div class="login"> <button>Login</button>
+      </div>
 
-  </div>
+    </div>
 
-<!-- ------------------- Navigation ------------------- -->
-  <nav>
+    <!-- ------------------- Navigation ------------------- -->
+    <nav>
 
-    <ul>
+      <ul>
 
-      <li><a href="index.html">Home</a></li>
-      <li class="dropdown">
+        <li><a href="index.html">Home</a></li>
+        <li class="dropdown">
           <span class="aboutBtn">About </span>
           <div class="dropdown-content"> <!-- Opens div class dropdown-content-->
             <a href="faq.html">FAQ</a>
@@ -38,46 +42,56 @@
             <a href="staff.html">Staff</a>
             <a href="uniform.html">Uniform</a>
           </div> <!-- Closes div class dropdown-content -->
-      </li>
-      <li><a href="news.html">News</a></li>
-      <li><a href="homeLearning.html">Home Learning</a></li>
-      <li><a href="contact.html">Contact</a></li>
+        </li>
+        <li><a href="news.html">News</a></li>
+        <li><a href="homeLearning.html">Home Learning</a></li>
+        <li><a href="contact.html">Contact</a></li>
 
-    </ul>
+      </ul>
 
-  </nav> 
+    </nav>
 
 
-<!-- ------------------- Main Body ------------------- -->
+    <!-- ------------------- Main Body ------------------- -->
 
-<div class="mainBody"> <!-- Opens div class mainBody -->
+    <div class="mainBody"> <!-- Opens div class mainBody -->
 
-</div> <!-- Closes div class mainBody -->
+    </div> <!-- Closes div class mainBody -->
 
-<!-- ------------------- Footer ------------------- -->
+    <!-- ------------------- Footer ------------------- -->
 
     <div class="footer"> <!-- Opens div class footer -->
-        <footer>
-          <div class="footerLeft"> <!-- Opens div class footerLeft -->
+      <footer>
+        <div class="footerLeft"> <!-- Opens div class footerLeft -->
           <!--float this left-->
           <h3> Useful Links</h3>
-          <a href = "https://twitter.com/BarnhillPrimary"><img src="https://www.phoronix.net/image.php?id=2023&image=twitter_x" alt= "X (Twitter)" style = "width: 60px; height:60px;"></a>
-          <a href = "https://secure.glowscotland.org.uk/login/login.htm"><img src="https://tse3.mm.bing.net/th?id=OIP.2e_o-42OuCuPqAyTXplgXAHaEc&pid=Api" alt= "Glow RM Unify" style = "width: 60px; height:60px;"></a>
-          <a href = "https://www.dundeecity.gov.uk/"><img src="https://tse2.mm.bing.net/th?id=OIP.mOvYybLpOpVzVJpuYj5pjQHaFM&pid=Api" alt= "Dundee City Council" style = "width: 60px; height:60px;"></a>
-          <a href = "http://www.educationscotland.gov.uk/"><img src="https://tse3.mm.bing.net/th?id=OIP.bawbOETZ8HJexKbpBS7ppwHaC9&pid=Api" alt= "Education Scotland" style = "width: 60px; height:60px;"></a>
-          <a href = "https://app.parentpay.com/public/client/security/v2/#/login"><img src="https://tse3.mm.bing.net/th?id=OIP.VxZRig9HkfZhpBCFEdyNEwHaFj&pid=Api" alt= "Parent Pay Portal" style = "width: 60px; height:60px;"></a>
-          </div> <!-- Closes div class footerLeft -->
-          <!--float this right-->
-          <div class="footerRight"> <!-- Opens div class footerRight -->
+          <a href="https://twitter.com/BarnhillPrimary"><img
+              src="https://www.phoronix.net/image.php?id=2023&image=twitter_x" alt="X (Twitter)"
+              style="width: 60px; height:60px;"></a>
+          <a href="https://secure.glowscotland.org.uk/login/login.htm"><img
+              src="https://tse3.mm.bing.net/th?id=OIP.2e_o-42OuCuPqAyTXplgXAHaEc&pid=Api" alt="Glow RM Unify"
+              style="width: 60px; height:60px;"></a>
+          <a href="https://www.dundeecity.gov.uk/"><img
+              src="https://tse2.mm.bing.net/th?id=OIP.mOvYybLpOpVzVJpuYj5pjQHaFM&pid=Api" alt="Dundee City Council"
+              style="width: 60px; height:60px;"></a>
+          <a href="http://www.educationscotland.gov.uk/"><img
+              src="https://tse3.mm.bing.net/th?id=OIP.bawbOETZ8HJexKbpBS7ppwHaC9&pid=Api" alt="Education Scotland"
+              style="width: 60px; height:60px;"></a>
+          <a href="https://app.parentpay.com/public/client/security/v2/#/login"><img
+              src="https://tse3.mm.bing.net/th?id=OIP.VxZRig9HkfZhpBCFEdyNEwHaFj&pid=Api" alt="Parent Pay Portal"
+              style="width: 60px; height:60px;"></a>
+        </div> <!-- Closes div class footerLeft -->
+        <!--float this right-->
+        <div class="footerRight"> <!-- Opens div class footerRight -->
           <button>Settings</button>
           <p>Contact Us
             other contact info</p>
-      
-          <p>&#169; Barnhill Primary School 2023</p>
-          </div> <!-- Closes div class footerRight -->
-        
-        </footer>
-      </div> <!-- Closes div class footer -->
-</body>
-</html>
 
+          <p>&#169; Barnhill Primary School 2023</p>
+        </div> <!-- Closes div class footerRight -->
+
+      </footer>
+    </div> <!-- Closes div class footer -->
+</body>
+
+</html>
