--- a/homeLearning.html
+++ b/homeLearning.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -10,15 +9,15 @@
 </head>
 
 <body>
-<!-- ------------------- Top Bar ------------------- -->
-<header>
+  <!-- ------------------- Top Bar ------------------- -->
+  <header>
 
-  <nav>
+    <nav>
 
-    <ul>
+      <ul>
 
-      <li><a href="index.html">Home</a></li>
-      <li class="dropdown">
+        <li><a href="index.html">Home</a></li>
+        <li class="dropdown">
           <span class="aboutBtn">About </span>
           <div class="dropdown-content"> <!-- Opens div class dropdown-content-->
             <a href="faq.html">FAQ</a>
@@ -26,94 +25,194 @@
             <a href="staff.html">Staff</a>
             <a href="uniform.html">Uniform</a>
           </div> <!-- Closes div class dropdown-content -->
-      </li>
-      <li><a href="news.html">News</a></li>
-      <li><a href="homeLearning.html">Home Learning</a></li>
-      <li><a href="contact.html">Contact</a></li>
+        </li>
+        <li><a href="news.html">News</a></li>
+        <li><a href="homeLearning.html">Home Learning</a></li>
+        <li><a href="contact.html">Contact</a></li>
 
-    </ul>
+      </ul>
 
-  </nav> 
-  <div> <a href="index.html"><img id="logo" src="bpslogo.png"></a> </div>
-  <h1> Barnhill Primary School </h1>
-</header>
-
-
-<!-- ------------------- Main Body ------------------- -->
-
-<div class="mainBody"> <!-- Opens div class mainBody -->
-
-  <h1>Home Learning</h1>
-
-  <p> Click on the links in the table for some home learning activities. Most of these activities are PC/laptop friendly and have tablet friendly versions as well. If you have any problems with any of the links please let us know.</p>
-  <h2> General </h2>
-  <table>
-    <tr> <th> Link </th> <th> Description </th></tr>
-    <tr> <td> Glow </td> <td> Log in to Glow to access email and other learning activities. </td> </tr>
-    <tr> <td> Study Ladder </td> <td> Mathematics, English, Science and more. Many children in the school have log ins for this. Study Ladder will allow children to access their free account during school hours </td> </tr>
-    <tr> <td> BBC Bitesize </td> <td> BBC Bitesize - links to games and activities to help with lots of curricular areas. </td> </tr>
-    <tr> <td> Sheppard Software </td> <td> Sheppard software site has links to some fantastic learning games. </td> </tr>
-    <tr> <td> Oxford Owl </td> <td> Oxford Owl. Find top tips and fun ideas to help you support your child's learning at home. </td> </tr>
-    <tr> <td> Crickweb </td> <td> Another website with lots of free games for P1-7. </td> </tr>
-    <tr> <td> Doorway Online </td> <td> Doorway Online. Lots of free learing activities for P1-3. </td> </tr>
-    <tr> <td> Digiworld </td> <td> Digiworld is a curriculum designed to help children, aged between 5 and 16, to develop the knowledge and skills they need to navigate the online world in a safer and more enjoyable way </td></tr>
-    <tr> <td> TTS </td> <td> Free downloadable independent and collaborative learning activities to print.  </td> </tr>
-  </table>
+    </nav>
+    <div> <a href="index.html"><img id="logo" src="bpslogo.png"></a> </div>
+    <h1> Barnhill Primary School </h1>
+  </header>
 
 
-  <h2> Maths </h2>
-  <table>
-    <tr> <th> Link </th> <th> Description </th></tr>
-    <tr> <td> Hit The Button </td> <td> A quick and easy game to practise addition, subtraction and multiplication tables. </td> </tr>
-    <tr> <td> Topmarks </td> <td> Lots of fun numeracy games for P1 all the way to P7. </td> </tr>
-    <tr> <td> Sumdog </td> <td> Numeracy games. P4-7 children should have a log in for this site. </td> </tr>
-    <tr> <td> Math Playground</td> <td> Number bonds to ten. A great way to look for numbers that add together to make 10. </td> </tr>
-    <tr> <td> Maths Zone </td> <td> A simple hit the button game to work on number bonds, multiplication and even decimals. </td> </tr>
-    <tr> <td> Splat Square </td> <td> Splat square. An interactive 100 square. Children can use this to work on number bonds or highlight multiplication tables. </td> </tr>
-    <tr> <td> Power Lines </td> <td> Power lines. A probem solving game with addition </td> </tr>
-    <tr> <td> Number Crunch </td> <td> Number Crunch. A game like candy crush but with numbers. </td> </tr>
-    <tr> <td> Mathsbot </td> <td> Mathsbot. A website for teachers that can be used to create numeracy questions to practise at home. </td> </tr>
-    <tr> <td> ICT Games Maths </td> <td> ICT Games. More links to games to develop numeracy and literacy skills. </td> </tr>
-    <tr> <td> Maths Learning Centre </td> <td> Maths learning centre. A great number line tool that works with whole numbers, fractions and decimals. </td> </tr>
-    <tr> <td> Hit The Button </td> <td> A quick and easy game to practise addition, subtraction and multiplication tables. </td> </tr>
-  </table>
+  <!-- ------------------- Main Body ------------------- -->
 
-  <h2> English </h2>
-  <table>
-    <tr> <th> Link </th> <th> Description </th></tr>
-    <tr> <td> Scottish Book Trust </td> <td> Lots of reading and writing activities and competitions </td> </tr>
-    <tr> <td> National Literacy Trust </td> <td> Reading resources from the National Literacy Trust. </td> </tr>
-    <tr> <td> ICT Games English </td> <td> ICT Games. More links to games to develop numeracy and literacy skills. </td> </tr>
-    <tr> <td> Phonics Play </td> <td> Phonics Play. Some free games to help with phonics. </td> </tr>
+  <div class="mainBody"> <!-- Opens div class mainBody -->
+
+    <h1>Home Learning</h1>
+
+    <p> Click on the links in the table for some home learning activities. Most of these activities are PC/laptop
+      friendly and have tablet friendly versions as well. If you have any problems with any of the links please let us
+      know.</p>
+    <h2> General </h2>
+    <table>
+      <tr>
+        <th> Link </th>
+        <th> Description </th>
+      </tr>
+      <tr>
+        <td> Glow </td>
+        <td> Log in to Glow to access email and other learning activities. </td>
+      </tr>
+      <tr>
+        <td> Study Ladder </td>
+        <td> Mathematics, English, Science and more. Many children in the school have log ins for this. Study Ladder
+          will allow children to access their free account during school hours </td>
+      </tr>
+      <tr>
+        <td> BBC Bitesize </td>
+        <td> BBC Bitesize - links to games and activities to help with lots of curricular areas. </td>
+      </tr>
+      <tr>
+        <td> Sheppard Software </td>
+        <td> Sheppard software site has links to some fantastic learning games. </td>
+      </tr>
+      <tr>
+        <td> Oxford Owl </td>
+        <td> Oxford Owl. Find top tips and fun ideas to help you support your child's learning at home. </td>
+      </tr>
+      <tr>
+        <td> Crickweb </td>
+        <td> Another website with lots of free games for P1-7. </td>
+      </tr>
+      <tr>
+        <td> Doorway Online </td>
+        <td> Doorway Online. Lots of free learing activities for P1-3. </td>
+      </tr>
+      <tr>
+        <td> Digiworld </td>
+        <td> Digiworld is a curriculum designed to help children, aged between 5 and 16, to develop the knowledge and
+          skills they need to navigate the online world in a safer and more enjoyable way </td>
+      </tr>
+      <tr>
+        <td> TTS </td>
+        <td> Free downloadable independent and collaborative learning activities to print. </td>
+      </tr>
     </table>
 
-  
 
-<!-- ------------------- Footer ------------------- -->
+    <h2> Maths </h2>
+    <table>
+      <tr>
+        <th> Link </th>
+        <th> Description </th>
+      </tr>
+      <tr>
+        <td> Hit The Button </td>
+        <td> A quick and easy game to practise addition, subtraction and multiplication tables. </td>
+      </tr>
+      <tr>
+        <td> Topmarks </td>
+        <td> Lots of fun numeracy games for P1 all the way to P7. </td>
+      </tr>
+      <tr>
+        <td> Sumdog </td>
+        <td> Numeracy games. P4-7 children should have a log in for this site. </td>
+      </tr>
+      <tr>
+        <td> Math Playground</td>
+        <td> Number bonds to ten. A great way to look for numbers that add together to make 10. </td>
+      </tr>
+      <tr>
+        <td> Maths Zone </td>
+        <td> A simple hit the button game to work on number bonds, multiplication and even decimals. </td>
+      </tr>
+      <tr>
+        <td> Splat Square </td>
+        <td> Splat square. An interactive 100 square. Children can use this to work on number bonds or highlight
+          multiplication tables. </td>
+      </tr>
+      <tr>
+        <td> Power Lines </td>
+        <td> Power lines. A probem solving game with addition </td>
+      </tr>
+      <tr>
+        <td> Number Crunch </td>
+        <td> Number Crunch. A game like candy crush but with numbers. </td>
+      </tr>
+      <tr>
+        <td> Mathsbot </td>
+        <td> Mathsbot. A website for teachers that can be used to create numeracy questions to practise at home. </td>
+      </tr>
+      <tr>
+        <td> ICT Games Maths </td>
+        <td> ICT Games. More links to games to develop numeracy and literacy skills. </td>
+      </tr>
+      <tr>
+        <td> Maths Learning Centre </td>
+        <td> Maths learning centre. A great number line tool that works with whole numbers, fractions and decimals.
+        </td>
+      </tr>
+      <tr>
+        <td> Hit The Button </td>
+        <td> A quick and easy game to practise addition, subtraction and multiplication tables. </td>
+      </tr>
+    </table>
 
-  <div class="footer"> <!-- Opens div class footer -->
-    <footer>
-      <div class="footerLeft"> <!-- Opens div class footerLeft -->
-      <!--float this left-->
-      <h3> Useful Links</h3>
-      <a href = "https://twitter.com/BarnhillPrimary"><img src="https://www.phoronix.net/image.php?id=2023&image=twitter_x" alt= "X (Twitter)" style = "width: 60px; height:60px;"></a>
-      <a href = "https://secure.glowscotland.org.uk/login/login.htm"><img src="https://tse3.mm.bing.net/th?id=OIP.2e_o-42OuCuPqAyTXplgXAHaEc&pid=Api" alt= "Glow RM Unify" style = "width: 60px; height:60px;"></a>
-      <a href = "https://www.dundeecity.gov.uk/"><img src="https://tse2.mm.bing.net/th?id=OIP.mOvYybLpOpVzVJpuYj5pjQHaFM&pid=Api" alt= "Dundee City Council" style = "width: 60px; height:60px;"></a>
-      <a href = "http://www.educationscotland.gov.uk/"><img src="https://tse3.mm.bing.net/th?id=OIP.bawbOETZ8HJexKbpBS7ppwHaC9&pid=Api" alt= "Education Scotland" style = "width: 60px; height:60px;"></a>
-      <a href = "https://app.parentpay.com/public/client/security/v2/#/login"><img src="https://tse3.mm.bing.net/th?id=OIP.VxZRig9HkfZhpBCFEdyNEwHaFj&pid=Api" alt= "Parent Pay Portal" style = "width: 60px; height:60px;"></a>
-      </div> <!-- Closes div class footerLeft -->
-      <!--float this right-->
-      <div class="footerRight"> <!-- Opens div class footerRight -->
-      <button>Settings</button>
-      <p>Contact Us
-        other contact info</p>
-  
-      <p>&#169; Barnhill Primary School 2023</p>
-      </div> <!-- Closes div class footerRight -->
-    
-    </footer>
-  </div> <!-- Closes div class footer -->
-</div> <!-- Closes div class mainBody -->
+    <h2> English </h2>
+    <table>
+      <tr>
+        <th> Link </th>
+        <th> Description </th>
+      </tr>
+      <tr>
+        <td> Scottish Book Trust </td>
+        <td> Lots of reading and writing activities and competitions </td>
+      </tr>
+      <tr>
+        <td> National Literacy Trust </td>
+        <td> Reading resources from the National Literacy Trust. </td>
+      </tr>
+      <tr>
+        <td> ICT Games English </td>
+        <td> ICT Games. More links to games to develop numeracy and literacy skills. </td>
+      </tr>
+      <tr>
+        <td> Phonics Play </td>
+        <td> Phonics Play. Some free games to help with phonics. </td>
+      </tr>
+    </table>
+
+
+
+    <!-- ------------------- Footer ------------------- -->
+
+    <div class="footer"> <!-- Opens div class footer -->
+      <footer>
+        <div class="footerLeft"> <!-- Opens div class footerLeft -->
+          <!--float this left-->
+          <h3> Useful Links</h3>
+          <a href="https://twitter.com/BarnhillPrimary"><img
+              src="https://www.phoronix.net/image.php?id=2023&image=twitter_x" alt="X (Twitter)"
+              style="width: 60px; height:60px;"></a>
+          <a href="https://secure.glowscotland.org.uk/login/login.htm"><img
+              src="https://tse3.mm.bing.net/th?id=OIP.2e_o-42OuCuPqAyTXplgXAHaEc&pid=Api" alt="Glow RM Unify"
+              style="width: 60px; height:60px;"></a>
+          <a href="https://www.dundeecity.gov.uk/"><img
+              src="https://tse2.mm.bing.net/th?id=OIP.mOvYybLpOpVzVJpuYj5pjQHaFM&pid=Api" alt="Dundee City Council"
+              style="width: 60px; height:60px;"></a>
+          <a href="http://www.educationscotland.gov.uk/"><img
+              src="https://tse3.mm.bing.net/th?id=OIP.bawbOETZ8HJexKbpBS7ppwHaC9&pid=Api" alt="Education Scotland"
+              style="width: 60px; height:60px;"></a>
+          <a href="https://app.parentpay.com/public/client/security/v2/#/login"><img
+              src="https://tse3.mm.bing.net/th?id=OIP.VxZRig9HkfZhpBCFEdyNEwHaFj&pid=Api" alt="Parent Pay Portal"
+              style="width: 60px; height:60px;"></a>
+        </div> <!-- Closes div class footerLeft -->
+        <!--float this right-->
+        <div class="footerRight"> <!-- Opens div class footerRight -->
+          <button>Settings</button>
+          <p>Contact Us
+            other contact info</p>
+
+          <p>&#169; Barnhill Primary School 2023</p>
+        </div> <!-- Closes div class footerRight -->
+
+      </footer>
+    </div> <!-- Closes div class footer -->
+  </div> <!-- Closes div class mainBody -->
 
 </body>
 
